--- a/prj.conf
+++ b/prj.conf
@@ -62,3 +62,22 @@ CONFIG_BT_L2CAP_TX_BUF_COUNT=5
 CONFIG_BT_PERIPHERAL=y
 
 CONFIG_BT_CONN_CTX=y
+
+CONFIG_BT_ATT_PREPARE_COUNT=2
+CONFIG_BT_CTLR_RX_BUFFERS=2
+CONFIG_BT_DATA_LEN_UPDATE=y
+CONFIG_BT_CTLR_PHY_2M=y
+CONFIG_BT_HCI_ACL_FLOW_CONTROL=y
+CONFIG_BT_GATT_CLIENT=y
+
+CONFIG_BT_BUF_ACL_RX_SIZE=251
+CONFIG_BT_L2CAP_TX_MTU=247
+CONFIG_BT_BUF_ACL_TX_COUNT=10
+CONFIG_BT_BUF_ACL_TX_SIZE=251
+CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
+
+CONFIG_BT_CTLR_PHY_CODED=y
+CONFIG_BT_CTLR_SDC_MAX_CONN_EVENT_LEN_DEFAULT=4000000
+CONFIG_BT_USER_DATA_LEN_UPDATE=y
+
+CONFIG_BOOTLOADER_MCUBOOT=y
